2007-11-23  Zaheer Abbas Merali <zaheerabbas at merali dot org>

	patch by: Alessandro Decina

	* gst/mpegtsparse/mpegtspacketizer.c:
	* gst/mpegtsparse/mpegtspacketizer.h:
	* gst/mpegtsparse/mpegtsparse.c:
	* gst/mpegtsparse/mpegtsparse.h:
	pat-info is now a signal not a GObject property that
	gets notified.
	pat-info, pmt-info now instead of passing a GObject as
	a parameter, pass a GstStructure.
	New signals: nit-info, sdt-info, eit-info for DVB SI information
	* sys/dvb/camconditionalaccess.c:
	* sys/dvb/camconditionalaccess.h:
	* sys/dvb/camdevice.c:
	* sys/dvb/camdevice.h:
	* sys/dvb/camswclient.c:
	* sys/dvb/camswclient.h:
	* sys/dvb/camutils.c:
	* sys/dvb/camutils.h:
	Cam code now uses the pmt GstStructure passed from mpegtsparse
	signals rather than the GObject.
	* sys/dvb/dvbbasebin.c:
	Use new signals in mpegtsparse and use GstStructures as per
	mpegtsparse's modified API.
	
2007-11-23  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/Makefile.am:
	* ext/metadata/gstmetadata.c:
	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadatamux.h:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/gstmetadataparse.h:
	* ext/metadata/metadataparse.c:
	* ext/metadata/metadataparse.h:
	* ext/metadata/metadataparsejpeg.c:
	* ext/metadata/metadataparsejpeg.h:
	* ext/metadata/metadataparsepng.c:
	* ext/metadata/metadataparsepng.h:
	* ext/metadata/metadataparsetypes.h:
	* ext/metadata/metadatatypes.c:
	* ext/metadata/metadatatypes.h:
	  Now parser is generic (just add/remove a list of chunks). And a
	  template of muxer has been created.

2007-11-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/speexresample/gstspeexresample.c:
	(gst_speex_resample_update_state):
	Only post the latency message if we have a resampler state already.

2007-11-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/speexresample/gstspeexresample.c:
	(gst_speex_resample_update_state):
	Also post GST_MESSAGE_LATENCY if the latency changes.
